c4prj1_deck/grade.txt
Grading at Thu Aug 30 23:50:42 UTC 2018
Compiling deck.c -> deck.o
deck.c: In function ‘build_remaining_deck’:
deck.c:71:22: error: incompatible type for argument 2 of ‘add_card_to’
       add_card_to(d, hands[h]->cards[c]);
                      ^
deck.c:38:6: note: expected ‘card_t {aka struct card_tag}’ but argument is of type ‘card_t * {aka struct card_tag *}’
 void add_card_to(deck_t * deck, card_t c) {
      ^
Compilation of deck.c failed

Overall Grade: F
